force-app/main/default/objects/University__c/fields/Accreditation_Status__c.field-meta.xml
<CustomField>
    <fullName>Accreditation_Status__c</fullName>
    <label>Accreditation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accredited</fullName>
            </value>
            <value>
                <fullName>Provisional</fullName>
            </value>
            <value>
                <fullName>Not Accredited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>