force-app/main/default/objects/University__c/fields/Established_Year__c.field-meta.xml
<CustomField>
    <fullName>Established_Year__c</fullName>
    <label>Established Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>