force-app/main/default/objects/University__c/fields/Student_Count__c.field-meta.xml
<CustomField>
    <fullName>Student_Count__c</fullName>
    <label>Student Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>